jquery.contenteditable.css
.content {
  background-color: #fff;
  width: 600px;
  height: 400px;
  -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
          border-radius: 6px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
          box-shadow: 0 1px 2px rgba(0,0,0,.15);
}

.contenteditable {
  height: 340px;
  outline: none;
  padding: 10px;
  overflow-y: auto;
}

.cursor {
  border: none;
  outline: none;
  padding: 0px;
  position: absolute;
  width: 4px;
  -webkit-appearance: none;
  -webkit-border-radius: 0;
     -moz-border-radius: 0;
          border-radius: 0;
  -webkit-box-shadow: none;
     -moz-box-shadow: none;
          box-shadow: none;
  -webkit-focus-ring-color: none;
}

.cursor:focus {
  outline: none;
  padding-left: 3px;
  -webkit-focus-ring-color: none;
  -webkit-box-shadow: none;
     -moz-box-shadow: none;
          box-shadow: none;
  filter: alpha(opacity=0);
  -khtml-opacity: 0;
    -moz-opacity: 0;
         opacity: 0;
}

.nav > li {
  width: 40px;
  text-align: center;
}

.nav > li:hover {
  background: rgba(255, 255, 255, 0.1);
}

.nav > li.active:hover {
  background: none;
}

.topbar {
  position: relative;
}

.topbar div > ul, .nav {
  margin-left: 6px;
}

.topbar-inner {
  -webkit-border-radius: 6px 6px 0 0;
     -moz-border-radius: 6px 6px 0 0;
          border-radius: 6px 6px 0 0;
}

